debug route & auth
