# storage/api-docs/api-docs.json
@@ -1,10 +1,197 @@
 {
     "openapi": "3.0.0",
     "info": {
-        "title": "Your super ApplicationAPI",
+        "title": "WebServices",
         "version": "1.0.0"
     },
     "paths": {
+        "/auth/login": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Log in",
+                "operationId": "App\\Http\\Controllers\\AuthController::login",
+                "requestBody": {
+                    "description": "Provide auth credentials",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "email": {
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "user.test@gmail.com"
+                                    },
+                                    "password": {
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "password"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Success : Get JWT token",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "token": {
+                                            "type": "string",
+                                            "example": "BearerToken"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "422": {
+                        "description": "Validation Error"
+                    }
+                }
+            }
+        },
+        "/auth/registration": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Add a new user",
+                "operationId": "App\\Http\\Controllers\\AuthController::register",
+                "requestBody": {
+                    "description": "Provide user informations",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "email",
+                                    "password"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "Add a new user",
+                                        "type": "string",
+                                        "example": "nom"
+                                    },
+                                    "email": {
+                                        "description": "Add a new user",
+                                        "type": "string",
+                                        "format": "email",
+                                        "example": "mail@mail.com"
+                                    },
+                                    "password": {
+                                        "description": "Add a new user",
+                                        "type": "string",
+                                        "format": "password",
+                                        "example": "password"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "user created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "token": {
+                                            "description": "Add a new user",
+                                            "type": "string",
+                                            "example": "bearerToken"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "422": {
+                        "description": "Validation Error"
+                    }
+                }
+            }
+        },
+        "/auth/logout": {
+            "post": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Logout",
+                "operationId": "App\\Http\\Controllers\\AuthController::logout",
+                "responses": {
+                    "200": {
+                        "description": "success message",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "description": "Logout",
+                                            "type": "string",
+                                            "example": "Successfully logged out"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            }
+        },
+        "/auth/user-profile": {
+            "get": {
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "Get loggued user informations",
+                "operationId": "App\\Http\\Controllers\\AuthController::userProfile",
+                "responses": {
+                    "200": {
+                        "description": "Success : Get user informations"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            }
+        },
         "/categories": {
             "post": {
                 "tags": [
@@ -341,6 +528,262 @@
                             "application/json": {
                                 "schema": {
                                     "$ref": "#/components/schemas/Product"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "422": {
+                        "description": "Validation Error"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            }
+        },
+        "/shops": {
+            "get": {
+                "tags": [
+                    "Shop"
+                ],
+                "summary": "Return all shops",
+                "operationId": "App\\Http\\Controllers\\ShopController::index",
+                "responses": {
+                    "200": {
+                        "description": "get shops",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "items": {
+                                        "$ref": "#/components/schemas/Shop"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "Shop"
+                ],
+                "summary": "Add a new shop",
+                "operationId": "App\\Http\\Controllers\\ShopController::store",
+                "requestBody": {
+                    "description": "Provide shop informations",
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "name",
+                                    "address_line",
+                                    "zipcode",
+                                    "city",
+                                    "country"
+                                ],
+                                "properties": {
+                                    "name": {
+                                        "description": "Add a new shop",
+                                        "type": "string",
+                                        "example": "shop_name"
+                                    },
+                                    "address_line": {
+                                        "description": "Add a new shop",
+                                        "type": "string",
+                                        "example": "shop_address_line"
+                                    },
+                                    "zipcode": {
+                                        "description": "Add a new shop",
+                                        "type": "string",
+                                        "example": "shop_zipcode"
+                                    },
+                                    "city": {
+                                        "description": "Add a new shop",
+                                        "type": "string",
+                                        "example": "shop_city"
+                                    },
+                                    "country": {
+                                        "description": "Add a new shop",
+                                        "type": "string",
+                                        "example": "shop_country"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "shop created",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Shop"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "422": {
+                        "description": "Validation Error"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            }
+        },
+        "/shops/{id}": {
+            "get": {
+                "tags": [
+                    "Shop"
+                ],
+                "summary": "Return a shop",
+                "operationId": "App\\Http\\Controllers\\ShopController::show",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "shop id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "get shop",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Shop"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "Shop"
+                ],
+                "summary": "Delete a shop",
+                "operationId": "App\\Http\\Controllers\\ShopController::destroy",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "shop id"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "shop deleted",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "OK"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    }
+                },
+                "security": [
+                    {
+                        "jwt": []
+                    }
+                ]
+            },
+            "patch": {
+                "tags": [
+                    "Shop"
+                ],
+                "summary": "Update a shop",
+                "operationId": "App\\Http\\Controllers\\ShopController::update",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "shop id"
+                    }
+                ],
+                "requestBody": {
+                    "description": "Provide shop informations",
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "name": {
+                                        "description": "Update a shop",
+                                        "type": "string",
+                                        "example": "shop_name"
+                                    },
+                                    "address_line": {
+                                        "description": "Update a shop",
+                                        "type": "string",
+                                        "example": "shop_address_line"
+                                    },
+                                    "zipcode": {
+                                        "description": "Update a shop",
+                                        "type": "string",
+                                        "example": "shop_zipcode"
+                                    },
+                                    "city": {
+                                        "description": "Update a shop",
+                                        "type": "string",
+                                        "example": "shop_city"
+                                    },
+                                    "country": {
+                                        "description": "Update a shop",
+                                        "type": "string",
+                                        "example": "shop_country"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "shop updated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Shop"
                                 }
                             }
                         }
